# game3

./: .editorconfig  .gdlintrc  .gitignore  .gitmodules  .pre-commit-config.yaml  .prettierrc  .yamlfmt  .yamllint  README.md  TASKS.txt  TASKS_HULVDAN.txt  cert.pem  custom.py  export_presets.cfg  gamelib.proto.gd  gamelib.proto.gd.uid  key.pem  main.tscn  profile_web_release.py  project.godot  pyproject.toml
.nvim-personal/: callbacks.lua  cli.ahk  setup.lua  startup.lua
addons/: VERSIONS
addons/ForgeJSONGD/: ForgeJSONGD.gd  ForgeJSONGDBase.gd  ForgeJSONGDHelper.gd
addons/beehave/: blackboard.gd  plugin.gd
addons/gamelib/: import.gd  import.gd.uid  plugin.cfg  plugin.gd  plugin.gd.uid
addons/godot-yandex-games-sdk/: sdk_export_plugin.gd.uid  sdk_plugin.gd.uid  yandex_sdk.gd.uid
addons/godot_doctor/: godot_doctor_plugin.gd  plugin.cfg
addons/gut/: autofree.gd  gut_loader.gd  gut_menu.gd  gut_plugin.gd  gut_tracked_error.gd
addons/immediate_gizmos/: README.md
addons/playgama_bridge/: plugin.cfg  postprocessor.gd  utils.gd
addons/protobuf/: parser.gd  parser.gd.uid  protobuf_cmdln.gd.uid  protobuf_core.gd  protobuf_core.gd.uid  protobuf_ui.gd.uid  protobuf_ui_dock.gd  protobuf_ui_dock.gd.uid  protobuf_util.gd.uid
addons/resources_spreadsheet_view/: editor_color_setter.gd  editor_view.gd  plugin.gd  saved_state.json  text_editing_utils.gd
addons/webbus/: main_screen_scene.gd  main_screen_scene.tscn  plugin.cfg  webbus.gd  wedbus_plugin.gd
assets/: async_data.tscn  default_bus_layout.tres  godot_profile_web.py  icon.svg.import  level.ldtk  localization.csv  localization.csv.import  localization.en.translation  localization.ru.translation  main.tscn  packed_ai_bomber.tscn  packed_ai_emoji_attack.tscn  packed_arrow.tscn  packed_bar.tscn  packed_bar_mob.tscn  packed_bar_player.tscn  packed_bow.tscn  packed_collider_tile.tscn  packed_creature.tscn  packed_door.tscn  packed_floor_tile.tscn  packed_floor_void_tile.tscn  packed_interactable.tscn  packed_projectile.tscn  packed_room.tscn  packed_spike.tscn  packed_ui_action_label.tscn  packed_ui_action_label_dodge.tscn  packed_ui_action_label_mob_attack.tscn  packed_ui_minimap_room.tscn  packed_ui_progression_entry.tscn  packed_zone_circle.tscn  profile_windows.py
assets/attacks/: DASH.yaml
assets/music/: music_theme__02.ogg.import  theme.ogg.import
cli/: Font Awesome 7 Brands-Regular-400.otf.import  Font Awesome 7 Free-Regular-400.otf.import  Font Awesome 7 Free-Solid-900.otf.import  __init__.py  bf_attacks_animator.py  bf_attacks_markuper.py  bf_cli.py  bf_cog.py  bf_game.py  bf_gamelib.py  bf_glib.py  bf_lib.py  bf_swatch.py  bf_typer.py  cli.ahk  code.bat  codium.bat  demo_gizmos.py.removeme  glib_pb2.py  glib_pb2.pyi
docs/: 1.png.import  10.png.import  11.png.import  12.png.import  13.png.import  14.png.import  15.png.import  2.png.import  3.png.import  4.png.import  5.png.import  6.png.import  7.png.import  8.png.import  9.png.import
script_templates/BeehaveNode/: default.gd
src/: bf_game.gd  bf_game.gd.uid  bf_gameanalytics.gd  bf_lib.gd  bf_lib.gd.uid  bf_meta.gd  meta.gd  meta.gd.uid  test.gd
src/codegen/: glib.gd  glib.gd.uid  hands.gd  hands.gd.uid  (+2 more)
(+423 files in other folders)
