[project]
name = "cli"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Aleksei Chistov", email = "aleksey.chistov@gmail.com" }
]
requires-python = ">=3.11.3"
dependencies = [
    "cogapp>=3.6.0",
    "cpplint>=2.0.2",
    "fnvhash>=0.2.1",
    "livereload>=2.7.1",
    "lxml>=6.0.2",
    "mypy>=1.18.2",
    "numpy>=2.3.5",
    "opencv-python>=4.11.0.86",
    "pillow>=12.0.0",
    "pip>=25.3",
    "pycolornames>=1.1.0",
    "pydantic>=2.12.5",
    "pydub>=0.25.1",
    "pyfiglet>=1.0.4",
    "pyjson5>=2.0.0",
    "pyright>=1.1.408",
    "pytest>=9.0.1",
    "pyyaml>=6.0.3",
    "rich>=14.2.0",
    "rpp>=0.5",
    "ruff>=0.14.6",
    "spacy>=3.8.11",
    "typer>=0.20.0",
    "types-pyyaml>=6.0.12.20250915",
    "websockets>=15.0.1",
]
packages = [
    { include = "cli" },
]

[project.scripts]
cli = "cli:main"

[tool.uv.build-backend]
module-root = ""

[build-system]
requires = ["uv_build>=0.9.13,<0.10.0"]
build-backend = "uv_build"

[tool.poetry.dependencies]
fnvhash = "^0.1.0"
pillow = "^10.3.0"
pre-commit-hooks = "^5.0.0"
pyjson5 = "^1.6.6"
python = "^3.11"
typer = "^0.12.3"
lxml = "^5.3.0"
pydantic = "^2.10.4"
cpplint = "^2.0.0"
pyyaml = "^6.0.2"
pytest = "^8.3.4"
cogapp = "^3.4.1"
opencv-python = "^4.11.0.86"
numpy = "^2.2.3"
ruff = "^0.11.2"
mypy = "^1.16.1"
types-pyyaml = "^6.0.12.20250516"
livereload = "^2.7.1"
pydub = "^0.25.1"

[tool.ruff]
line-length = 90

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "ANN",
    "B011",
    "BLE001",
    "C401",
    "C901",
    "COM",
    "D",
    "DTZ005",
    "E501",
    "E731",
    "E741",
    "ERA001",
    "FA102",
    "FBT001",
    "FBT002",
    "FBT003",
    "FIX002",
    "G001",
    "G004",
    "LOG002",
    "N806",
    "N815",
    "PERF401",
    "PGH003",
    "PGH004",
    "PLR0912",
    "PLR0913",
    "PLR0915",
    "PLR1714",
    "PLR1722",
    "PLR2004",
    "PLR5501",
    "PLW0603",
    "PT015",
    "PTH123",
    "RET507",
    "RUF001",
    "RUF003",
    "RUF012",
    "S",
    "SIM102",
    "SIM103",
    "SIM108",
    "SIM114",
    "T201",
    "TD002",
    "TD003",
    "TD005",
    "TRY300",
    "UP032",
    "UP035",
]

[tool.pytest.ini_options]
addopts = ["-ra"]
pythonpath = "cli"
testpaths = ["cli"]
python_files = ["*.py"]
python_functions = ["test_*"]
python_classes = ["Test*"]

[tool.mypy]
ignore_missing_imports = true

[tool.pyright]
include = ["cli"]
exclude = [
    "**/node_modules",
    "**/__pycache__",
    "**/.venv",
    "**/build",
    "**/dist",
]
# ignore = ["src/oldstuff"]
# defineConstant = { DEBUG = true }
# stubPath = "src/stubs"
# reportMissingImports = "error"
# reportMissingTypeStubs = false
pythonVersion = "3.11"
# pythonPlatform = "Linux"
# executionEnvironments = [
#   { root = "src/web", pythonVersion = "3.5", pythonPlatform = "Windows", extraPaths = [ "src/service_libs" ], reportMissingImports = "warning" },
#   { root = "src/sdk", pythonVersion = "3.0", extraPaths = [ "src/backend" ] },
#   { root = "src/tests", extraPaths = ["src/tests/e2e", "src/sdk" ]},
#   { root = "src" }
# ]
